# candle-nvlink-benchmark

./: .gitignore  Cargo.toml  NCCL_Pipeline_Analysis.md  README.md  candle_device_fix.patch  candle_multi_gpu_fix.patch  cuda_p2p_test  monitor_nvlink.sh  nvlink_monitor.py  temp_device_enum.rs
config/: m4-cpu-minimal.json  m4-metal-large.json  m4-metal-medium.json  m4-metal-stress.json  m4-metal.json  v100-data-parallel.json  v100-hybrid-parallel.json  v100-model-parallel-extended.json  v100-model-parallel.json  v100-nvlink-small.json  v100-nvlink.json  v100-pipeline.json  v100-single-extended.json  v100-single.json  v100-tdp-extended.json  v100-true-data-parallel.json
src/: backend.rs  benchmark.rs  config.rs  main.rs  metrics.rs  models.rs  parallelization.rs
