[package]
name = "distributed-training-benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Distributed Training Benchmark Suite using Candle - M4 Metal to 4xV100 NVLink"

[dependencies]
candle-core = { path = "candle/candle-core", features = ["cuda"] }
candle-nn = { path = "candle/candle-nn" }
candle-transformers = { path = "candle/candle-transformers" }
candle-datasets = { path = "candle/candle-datasets" }

# Backend support
candle-metal-kernels = { version = "0.9.1", optional = true }
cudarc = { version = "0.16.4", optional = true, default-features = false, features = ["dynamic-linking"] }

# Utilities
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9.1"
indicatif = "0.17"
tabled = "0.20.0"

# Performance monitoring
sysinfo = "0.35.2"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
rustc_version_runtime = "0.3"

[features]
default = ["cuda"]
metal = ["candle-metal-kernels"]
cuda = ["cudarc"]

[[bin]]
name = "benchmark"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort" 